# miwifi-listener

./: LICENSE
.github/workflows/: client.yml  function.yml  python_docker.yml
client/: angular.json  package-lock.json  package.json
client/src/: index.html
client/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
client/src/app/_models/: wifirequest.model.ts
client/src/app/_services/: auth.service.ts  requests.service.ts  user.service.ts
client/src/app/home/: home.component.html  home.component.ts
client/src/app/login/: login.component.html  login.component.ts
function/: requirements.txt
function/miwifi_login/: __init__.py
function/miwifi_scheduler/: function.json  main.py  scheduler_manager.py
function/miwifi_scheduler/storage/: azure_storage.py
function/miwifi_users/: __init__.py
listener/: Dockerfile  app.py  docker-compose.yml  pyproject.toml
listener/src/listener/: app.py  models.py
listener/src/listener/router/: encrypt.py  router_model.py  test_exmaple.py
